@@ -1,1 +1,2 @@
-Bertrand Janin <tamentis@neopulsar.org>
+Bertrand Janin <b@grun.gy>
+Stéphane Angel <s.angel@twidi.com> (initial git patch)
