@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009,2011 Bertrand Janin <tamentis@neopulsar.org>
+ * Copyright (c) 2009-2012 Bertrand Janin <b@grun.gy>
  *
  * Permission to use, copy, modify, and distribute this software for any
  * purpose with or without fee is hereby granted, provided that the above
@@ -43,6 +43,7 @@
 int 	 cfg_cleancut = 0;
 int	 cfg_maxpwdlen = MAXPWD_LEN;
 int	 cfg_mercurial = 0;
+int	 cfg_git = 0;
 int	 cfg_newsgroup = 0;
 wchar_t	 cfg_filler[FILLER_LEN] = FILLER_DEF;
 wchar_t	 home[MAXPATHLEN];
@@ -55,8 +56,17 @@ struct {
 
 
 /* Utility functions from OpenBSD/SSH in separate files (ISC license) */
-size_t		 wcslcpy(wchar_t *dst, const wchar_t *src, size_t siz);
-wchar_t		*strdelim(wchar_t **s);
+size_t		 wcslcpy(wchar_t *, const wchar_t *, size_t);
+wchar_t		*strdelim(wchar_t **);
+size_t		 strlcpy(char *, const char *, size_t);
+
+
+/* Types of source control mechanisms */
+enum version_control_system {
+	VCS_NONE,
+	VCS_MERCURIAL,
+	VCS_GIT
+};
 
 
 /**
@@ -135,6 +145,10 @@ set_variable(wchar_t *name, wchar_t *value, int linenum)
 	/* set mercurial <bool> */
 	} else if (wcscmp(name, L"mercurial") == 0) {
 		cfg_mercurial = (value != NULL && *value == 'o') ? 1 : 0;
+
+	/* set git <bool> */
+	} else if (wcscmp(name, L"git") == 0) {
+		cfg_git = (value != NULL && *value == 'o') ? 1 : 0;
 
 	/* set newsgroup <bool> */
 	} else if (wcscmp(name, L"newsgroup") == 0) {
@@ -269,7 +283,7 @@ newsgroupize(wchar_t *s)
 	/* idx is less than 4, we only have one slash, just keep org as is */
 	if (idx < 4)
 		return;
-	
+
 	/* Copy letters+slash making sure the last part is left untouched. */
 	wcslcpy(org, t, idx);
 	if (last != NULL)
@@ -300,7 +314,7 @@ quickcut(wchar_t *s, size_t len)
  * and return the amount of bytes copied.
  */
 size_t
-get_branch(wchar_t *dst, size_t size)
+get_mercurial_branch(wchar_t *dst, size_t size)
 {
 	FILE *fp;
 	char *c;
@@ -310,7 +324,7 @@ get_branch(wchar_t *dst, size_t size)
 	size_t branch_size;
 	struct stat bufstat;
 	int found_repo = -1;
-	
+
 	/* start from the working dir */
 	strlcpy(pwd, getcwd(NULL, MAXPATHLEN), MAXPATHLEN);
 
@@ -328,11 +342,12 @@ get_branch(wchar_t *dst, size_t size)
 	if (found_repo == -1)
 		return 0;
 
-	/* TODO: unable to open + verbose -> say it! */
 	fp = fopen(candidate, "r");
-	if (fp == NULL)
-		return 0;
-	
+	if (fp == NULL) {
+		strlcpy(buf, "###", 4);
+		return mbstowcs(dst, buf, MAX_BRANCH_LEN);
+	}
+
 	fread(buf, 1, size, fp);
 	fclose(fp);
 
@@ -346,10 +361,81 @@ get_branch(wchar_t *dst, size_t size)
 }
 
 /**
- * Add the mercurial branch at the beginning of the path.
+ * Recurse up from $PWD to find a .git/ directory with a valid HEAD file,
+ * read this file, copy the branch name in dst, up to a maximum of 'size'
+ * and return the amount of bytes copied.
  */
-void
-add_branch(wchar_t *s)
+size_t
+get_git_branch(wchar_t *dst, size_t size)
+{
+	FILE *fp;
+	char *c;
+	char pwd[MAXPATHLEN];
+	char candidate[MAXPATHLEN];
+	char buf[MAX_BRANCH_LEN];
+	size_t s;
+	struct stat bufstat;
+	int found_repo = -1;
+
+	/* start from the working dir */
+	strlcpy(pwd, getcwd(NULL, MAXPATHLEN), MAXPATHLEN);
+
+	do {
+		snprintf(candidate, MAXPATHLEN, "%s/.git/HEAD", pwd);
+
+		found_repo = stat(candidate, &bufstat);
+
+		if ((c = strrchr(pwd, '/')) == NULL)
+			break;
+
+		*c = '\0';
+	} while (found_repo != 0 && candidate[1] != '\0');
+
+	if (found_repo == -1)
+		return 0;
+
+	fp = fopen(candidate, "r");
+	if (fp == NULL) {
+		strlcpy(buf, "###", 4);
+		return mbstowcs(dst, buf, MAX_BRANCH_LEN);
+	}
+
+	s = fread(buf, 1, size, fp);
+	fclose(fp);
+
+	buf[MAX_BRANCH_LEN] = '\0';
+
+	/* This is a branch head, just print the branch. */
+	if (strncmp(buf, "ref: refs/heads/", 16) == 0) {
+		*(strchr(buf, '\n')) = '\0';
+		c = buf + 16;
+		return mbstowcs(dst, c, MAX_BRANCH_LEN);
+	}
+
+	/* Show all other kinds of ref as-is (does it even exist?) */
+	if (strncmp(buf, "ref:", 4) == 0) {
+		*(strchr(buf, '\n')) = '\0';
+		c = buf + 5;
+		return mbstowcs(dst, c, MAX_BRANCH_LEN);
+	}
+
+	/* That's probably just a changeset, just show the first 6 chars */
+	if (s > 6) {
+		strlcpy(buf + 6, "...", 4);
+		return mbstowcs(dst, buf, MAX_BRANCH_LEN);
+	}
+
+	/* We shouldn't get there, but we mind as well no crash. */
+	strlcpy(buf, "???", 4);
+	return mbstowcs(dst, buf, MAX_BRANCH_LEN);
+}
+
+/**
+ * Add the mercurial branch at the beginning of the path. If a branch was
+ * found, 1 is returned else 0.
+ */
+int
+add_branch(wchar_t *s, enum version_control_system vcs)
 {
 	wchar_t org[MAXPATHLEN];
 	wchar_t branch[MAX_BRANCH_LEN];
@@ -357,14 +443,26 @@ add_branch(wchar_t *s)
 
 	wcslcpy(org, s, MAXPATHLEN);
 
-	if (get_branch(branch, MAX_BRANCH_LEN) == 0)
-		return;
+	switch (vcs) {
+		case VCS_MERCURIAL:
+			if (get_mercurial_branch(branch, MAX_BRANCH_LEN) == 0)
+				return 0;
+			break;
+		case VCS_GIT:
+			if (get_git_branch(branch, MAX_BRANCH_LEN) == 0)
+				return 0;
+			break;
+		default:
+			return 0;
+	}
 
 	len = wcslcpy(s, branch, MAX_BRANCH_LEN);
 
 	s += len;
 	*(s++) = ':';
 	wcslcpy(s, org, MAXPATHLEN - len - 1);
+
+	return 1;
 }
 
 
@@ -413,7 +511,7 @@ cleancut(wchar_t *s)
 
 	s -= flen;
 	wcsncpy(s, cfg_filler, flen);
-	
+
 cleancut_final:
 	wcslcpy(t, s, MAXPATHLEN);
 	wcslcpy(org, t, MAXPATHLEN);
@@ -443,7 +541,7 @@ replace_aliases(wchar_t *s)
 	/* No alias found, you can leave now */
 	if (chosen == -1)
 		return;
-	
+
 	nlen = wcslen(aliases[chosen].name);
 	s += (max - nlen);
 	wcsncpy(s, aliases[chosen].name, nlen);
@@ -461,6 +559,7 @@ main(int ac, const char **av)
 	wchar_t pwd[MAXPATHLEN];
 	size_t len;
 	char *t;
+	int found_repo = 0;
 
 	if (ac != 1) {
 		printf("usage: prwd\n");
@@ -507,7 +606,11 @@ main(int ac, const char **av)
 
 	/* If mercurial is enabled, show the branch */
 	if (cfg_mercurial == 1) {
-		add_branch(pwd);
+		found_repo = add_branch(pwd, VCS_MERCURIAL);
+	}
+
+	if (found_repo == 0 && cfg_git == 1) {
+		add_branch(pwd, VCS_GIT);
 	}
 
 	wcstombs(mbpwd, pwd, MAXPATHLEN);
