@@ -8,8 +8,9 @@ set cleancut on
 # Shorten the path newsgroup style (first letters)
 #set newsgroup on
 
-# Show mercurial branch
+# Show mercurial and git branches
 #set mercurial on
+#set git on
 
 # Aliases
 alias *lt /home/tamentis/livetech
