@@ -1,7 +1,9 @@
 1.6 Bertrand Janin <b@grun.gy>
 
 	* Fixed segfault in directories that got removed or got their
-	permissions changed.
+	  permissions changed.
+	* Added primitive support for git HEAD display (initial patch by
+	  Stéphane Angel)
 
 1.5 Bertrand Janin <b@grun.gy>
 
